--- a/classic_theme/manifest.json
+++ b/classic_theme/manifest.json
@@ -1,53 +1,67 @@
 {
-  "name": "Copenhagen",
+  "name": "classic",
   "author": "Zendesk",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "api_version": 1,
   "settings": [
     {
       "label": "Colors",
       "variables": [
         {
-          "identifier": "color_1",
+          "identifier": "brand_color",
           "type": "color",
           "description": "Brand color for major navigational elements",
           "label": "Brand color",
-          "value": "#7B7B7B"
+          "value": "#0072ef"
         },
         {
-          "identifier": "color_skip",
-          "type": "color",
-          "description": "Make thing ugly",
-          "label": "Skip color",
-          "value": "#11f1f1"
-        },
-        {
-          "identifier": "color_2",
+          "identifier": "brand_text_color",
           "type": "color",
           "description": "Brand color for hover and active states",
           "label": "Brand text color",
-          "value": "#404040"
+          "value": "rgba(245, 15, 15, 1)"
         },
         {
-          "identifier": "body_text",
+          "identifier": "text_color",
           "type": "color",
           "description": "Text color for body and heading elements",
           "label": "Text color",
           "value": "#333333"
         },
         {
-          "identifier": "color_4",
+          "identifier": "link_color",
           "type": "color",
           "description": "Text color for link elements",
           "label": "Link color",
-          "value": "#1A74B0"
+          "value": "#0072ef"
         },
         {
-          "identifier": "color_5",
+          "identifier": "background_color",
           "type": "color",
           "description": "Background color of your Help Center",
           "label": "Background color",
-          "value": "#FFFFFF"
+          "value": "#ffffff"
+        },
+        {
+          "identifier": "header_background_color",
+          "type": "color",
+          "description": "Background color of header",
+          "label": "Header Background color",
+          "value": "#3a3f4e"
+        },
+        {
+          "identifier": "sub_footer_background_color",
+          "type": "color",
+          "description": "Background color of Sub Footer",
+          "label": "Sub Footer Background color",
+          "value": "#3a3f4e"
+        },
+        {
+          "identifier": "hero_background_color",
+          "type": "color",
+          "description": "Background color of Hero Section",
+          "label": "Hero Section Background color",
+          "value": "#3a3f4e"
         }
       ]
     },
@@ -55,10 +69,10 @@
       "label": "Fonts",
       "variables": [
         {
-          "identifier": "font_1",
+          "identifier": "heading_font",
           "type": "list",
           "description": "Font for headings",
-          "label": "Heading",
+          "label": "Heading Font",
           "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
           "options": [
             {
@@ -128,10 +142,10 @@
           ]
         },
         {
-          "identifier": "font_2",
+          "identifier": "text_font",
           "type": "list",
           "description": "Font for body text",
-          "label": "Text",
+          "label": "Text Font",
           "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
           "options": [
             {
