--- a/doc_theme/manifest.json
+++ b/doc_theme/manifest.json
@@ -1,58 +1,59 @@
 {
-  "name": "Doc Theme",
+  "name": "Custom Theme",
   "author": "Zendesk",
   "version": "1.0.0",
   "api_version": 1,
+  "default_locale": "en-us",
   "settings": [
     {
-      "label": "Colors",
+      "label": "colors_group_label",
       "variables": [
         {
-          "identifier": "brand_color",
+          "identifier": "color_1",
           "type": "color",
-          "description": "Brand color for major navigational elements",
-          "label": "Brand color",
-          "value": "#0072ef"
+          "description": "brand_color_description",
+          "label": "brand_color_label",
+          "value": "#1e8098"
         },
         {
-          "identifier": "brand_text_color",
+          "identifier": "color_2",
           "type": "color",
-          "description": "Brand color for hover and active states",
-          "label": "Brand text color",
+          "description": "brand_text_color_description",
+          "label": "brand_text_color_label",
           "value": "#ffffff"
         },
         {
-          "identifier": "text_color",
+          "identifier": "color_3",
           "type": "color",
-          "description": "Text color for body and heading elements",
-          "label": "Text color",
+          "description": "text_color_description",
+          "label": "text_color_label",
           "value": "#333333"
         },
         {
-          "identifier": "link_color",
+          "identifier": "color_4",
           "type": "color",
-          "description": "Text color for link elements",
-          "label": "Link color",
-          "value": "#0072ef"
+          "description": "link_color_description",
+          "label": "link_color_label",
+          "value": "#1e8098"
         },
         {
-          "identifier": "background_color",
+          "identifier": "color_5",
           "type": "color",
-          "description": "Background color of your Help Center",
-          "label": "Background color",
+          "description": "background_color_description",
+          "label": "background_color_label",
           "value": "#ffffff"
         }
       ]
     },
     {
-      "label": "Fonts",
+      "label": "fonts_group_label",
       "variables": [
         {
-          "identifier": "heading_font",
+          "identifier": "font_1",
           "type": "list",
-          "description": "Font for headings",
-          "label": "Heading Font",
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
+          "description": "heading_font_description",
+          "label": "heading_font_label",
+          "value": "'Helvetica Neue', Arial, Helvetica, sans-serif",
           "options": [
             {
               "label": "System",
@@ -121,11 +122,11 @@
           ]
         },
         {
-          "identifier": "text_font",
+          "identifier": "font_2",
           "type": "list",
-          "description": "Font for body text",
-          "label": "Text Font",
-          "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
+          "description": "text_font_description",
+          "label": "text_font_label",
+          "value": "'Helvetica Neue', Arial, Helvetica, sans-serif",
           "options": [
             {
               "label": "System",
@@ -196,42 +197,42 @@
       ]
     },
     {
-      "label": "Brand",
+      "label": "brand_group_label",
       "variables": [
         {
           "identifier": "logo",
           "type": "file",
-          "description": "Company logo",
-          "label": "Logo"
+          "description": "logo_description",
+          "label": "logo_label"
         },
         {
           "identifier": "favicon",
           "type": "file",
-          "description": "Icon displayed in the address bar of your browser",
-          "label": "Favicon"
+          "description": "favicon_description",
+          "label": "favicon_label"
         }
       ]
     },
     {
-      "label": "Images",
+      "label": "images_group_label",
       "variables": [
         {
           "identifier": "homepage_background_image",
           "type": "file",
-          "description": "Hero image on the home page",
-          "label": "Home hero image"
+          "description": "homepage_background_image_description",
+          "label": "homepage_background_image_label"
         },
         {
           "identifier": "community_background_image",
           "type": "file",
-          "description": "Hero image on the community topics page",
-          "label": "Community hero image"
+          "description": "community_background_image_description",
+          "label": "community_background_image_label"
         },
         {
           "identifier": "community_image",
           "type": "file",
-          "description": "Image for the community section on the home page",
-          "label": "Community banner"
+          "description": "community_image_description",
+          "label": "community_image_label"
         }
       ]
     }
