--- a/nest_theme/manifest.json
+++ b/nest_theme/manifest.json
@@ -1,64 +1,58 @@
 {
-  "name": "Copenhagen",
+  "name": "Custom Theme",
   "author": "Zendesk",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "api_version": 1,
+  "default_locale": "en-us",
   "settings": [
     {
-      "label": "Colors",
+      "label": "colors_group_label",
       "variables": [
         {
           "identifier": "color_1",
           "type": "color",
-          "description": "Brand color for major navigational elements",
-          "label": "Brand color",
-          "value": "#7B7B7B"
-        },
-        {
-          "identifier": "color_skip",
-          "type": "color",
-          "description": "Make thing ugly",
-          "label": "Skip color",
-          "value": "#11f1f1"
+          "description": "brand_color_description",
+          "label": "brand_color_label",
+          "value": "#b94536"
         },
         {
           "identifier": "color_2",
           "type": "color",
-          "description": "Brand color for hover and active states",
-          "label": "Brand text color",
-          "value": "#404040"
+          "description": "brand_text_color_description",
+          "label": "brand_text_color_label",
+          "value": "#ffffff"
         },
         {
-          "identifier": "body_text",
+          "identifier": "color_3",
           "type": "color",
-          "description": "Text color for body and heading elements",
-          "label": "Text color",
+          "description": "text_color_description",
+          "label": "text_color_label",
           "value": "#333333"
         },
         {
           "identifier": "color_4",
           "type": "color",
-          "description": "Text color for link elements",
-          "label": "Link color",
-          "value": "#1A74B0"
+          "description": "link_color_description",
+          "label": "link_color_label",
+          "value": "#b94536"
         },
         {
           "identifier": "color_5",
           "type": "color",
-          "description": "Background color of your Help Center",
-          "label": "Background color",
-          "value": "#FFFFFF"
+          "description": "background_color_description",
+          "label": "background_color_label",
+          "value": "#ffffff"
         }
       ]
     },
     {
-      "label": "Fonts",
+      "label": "fonts_group_label",
       "variables": [
         {
           "identifier": "font_1",
           "type": "list",
-          "description": "Font for headings",
-          "label": "Heading",
+          "description": "heading_font_description",
+          "label": "heading_font_label",
           "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
           "options": [
             {
@@ -130,8 +124,8 @@
         {
           "identifier": "font_2",
           "type": "list",
-          "description": "Font for body text",
-          "label": "Text",
+          "description": "text_font_description",
+          "label": "text_font_label",
           "value": "-apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif",
           "options": [
             {
@@ -203,42 +197,42 @@
       ]
     },
     {
-      "label": "Brand",
+      "label": "brand_group_label",
       "variables": [
         {
           "identifier": "logo",
           "type": "file",
-          "description": "Company logo",
-          "label": "Logo"
+          "description": "logo_description",
+          "label": "logo_label"
         },
         {
           "identifier": "favicon",
           "type": "file",
-          "description": "Icon displayed in the address bar of your browser",
-          "label": "Favicon"
+          "description": "favicon_description",
+          "label": "favicon_label"
         }
       ]
     },
     {
-      "label": "Images",
+      "label": "images_group_label",
       "variables": [
         {
           "identifier": "homepage_background_image",
           "type": "file",
-          "description": "Hero image on the home page",
-          "label": "Home hero image"
+          "description": "homepage_background_image_description",
+          "label": "homepage_background_image_label"
         },
         {
           "identifier": "community_background_image",
           "type": "file",
-          "description": "Hero image on the community topics page",
-          "label": "Community hero image"
+          "description": "community_background_image_description",
+          "label": "community_background_image_label"
         },
         {
           "identifier": "community_image",
           "type": "file",
-          "description": "Image for the community section on the home page",
-          "label": "Community banner"
+          "description": "community_image_description",
+          "label": "community_image_label"
         }
       ]
     }
